--- a/pytorch/torch28.ipynb
+++ b/pytorch/torch28.ipynb
@@ -8,17 +8,17 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "c8a99c1a083a84d"
+   "id": "5eabfcddd2327ffb"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:34:22.413613900Z",
-     "start_time": "2023-09-22T00:34:22.342344700Z"
+     "end_time": "2023-09-22T05:55:39.716209300Z",
+     "start_time": "2023-09-22T05:55:39.682620200Z"
     }
    },
    "outputs": [],
@@ -26,7 +26,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torchvision.transforms as transforms\n",
-    "import torchvision.datasets as datasets\n",
+    "import torchvision.datasets as dataset\n",
     "from torch.autograd import Variable\n",
     "from torch.nn import Parameter\n",
     "from torch import Tensor\n",
@@ -52,15 +52,13 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "aed9c12aecc0cbd7"
+   "id": "c7b9ea85e60432af"
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "outputs": [],
    "source": [
-    "import torchvision.transforms as transforms\n",
-    "\n",
     "mnist_transform = transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5, ), (1.0, ))\n",
@@ -69,30 +67,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:34:22.415232400Z",
-     "start_time": "2023-09-22T00:34:22.352538700Z"
+     "end_time": "2023-09-22T05:55:39.717520400Z",
+     "start_time": "2023-09-22T05:55:39.688665400Z"
     }
    },
-   "id": "cc40c24073795dfc"
+   "id": "558ec6a73db8c7fb"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**데이터셋 내려받기**"
+    "**데이터셋 내려받기 및 전처리 적용**"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "3c2194bdd201f289"
+   "id": "968a28e69cd9f47e"
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "from torchvision.datasets import MNIST\n",
-    "\n",
-    "download_root = \"../pytorch/MNIST_DATASET\"\n",
+    "download_root = \",,/pytorch/MNIST_DATASET\"\n",
     "\n",
     "train_dataset = MNIST(download_root, transform=mnist_transform, train=True, download=True)\n",
     "valid_dataset = MNIST(download_root, transform=mnist_transform, train=False, download=True)\n",
@@ -101,25 +98,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:34:22.474631700Z",
-     "start_time": "2023-09-22T00:34:22.361537Z"
+     "end_time": "2023-09-22T05:55:39.740037300Z",
+     "start_time": "2023-09-22T05:55:39.696607900Z"
     }
    },
-   "id": "b5117c69d025915b"
+   "id": "828327bbdf3f22a8"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**데이터셋을 메모리로 가져오기**"
+    "**데이터셋 메모리로 가져오기**"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "50576a19c0495b63"
+   "id": "c685891ef8250aee"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "batch_size = 64\n",
@@ -130,25 +127,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:34:22.474631700Z",
-     "start_time": "2023-09-22T00:34:22.410245200Z"
+     "end_time": "2023-09-22T05:55:39.741038200Z",
+     "start_time": "2023-09-22T05:55:39.739029700Z"
     }
    },
-   "id": "b846c00c7dbe4fae"
+   "id": "4ee58ea455caa1a7"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**변수 값 지정**"
+    "**변수 값 설정**"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "ff88a03de0304bb7"
+   "id": "37ad6f8a395c7e0"
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "batch_size = 100\n",
@@ -159,90 +156,91 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:34:22.475631600Z",
-     "start_time": "2023-09-22T00:34:22.415232400Z"
+     "end_time": "2023-09-22T05:55:39.751501900Z",
+     "start_time": "2023-09-22T05:55:39.744662900Z"
     }
    },
-   "id": "f0153c939a2aea14"
+   "id": "31226d8e56c97836"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**LSTM 셀 네트워크 구축**"
+    "**GRU 셀 네트워크**"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "4c41636729707e99"
+   "id": "355e8b3bbd4a56a2"
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "outputs": [],
    "source": [
-    "class LSTMCell(nn.Module):\n",
+    "class GRUCell(nn.Module):\n",
     "    def __init__(self, input_size, hidden_size, bias=True):\n",
-    "        super(LSTMCell, self).__init__()\n",
+    "        super(GRUCell, self).__init__()\n",
     "        self.input_size = input_size\n",
     "        self.hidden_size = hidden_size\n",
     "        self.bias = bias\n",
-    "        self.x2h = nn.Linear(input_size, 4 * hidden_size, bias=bias)\n",
-    "        self.h2h = nn.Linear(hidden_size, 4 * hidden_size, bias=bias)\n",
+    "        self.x2h = nn.Linear(input_size, 3 * hidden_size, bias=bias)\n",
+    "        self.h2h = nn.Linear(hidden_size, 3 * hidden_size, bias=bias)\n",
     "        self.reset_parameters()\n",
     "        \n",
     "    def reset_parameters(self):\n",
     "        std = 1.0 / math.sqrt(self.hidden_size)\n",
     "        for w in self.parameters():\n",
     "            w.data.uniform_(-std, std)\n",
-    "    \n",
+    "            \n",
     "    def forward(self, x, hidden):\n",
-    "        hx, cx = hidden\n",
     "        x = x.view(-1, x.size(1))\n",
     "        \n",
-    "        gates = self.x2h(x) + self.h2h(hx)\n",
-    "        gates = gates.squeeze()\n",
-    "        ingate, forgetgate, cellgate, outgate = gates.chunk(4, 1)\n",
+    "        gate_x = self.x2h(x)\n",
+    "        gate_h = self.h2h(hidden)\n",
+    "        gate_x = gate_x.squeeze()\n",
+    "        gate_h = gate_h.squeeze()\n",
     "        \n",
-    "        ingate = F.sigmoid(ingate)\n",
-    "        forgetgate = F.sigmoid(forgetgate)\n",
-    "        cellgate = F.tanh(cellgate)\n",
-    "        outgate = F.sigmoid(outgate)\n",
+    "        i_r, i_i, i_n = gate_x.chunk(3, 1)\n",
+    "        h_r, h_i, h_n = gate_h.chunk(3, 1)\n",
     "        \n",
-    "        cy = torch.mul(cx, forgetgate) + torch.mul(ingate, cellgate)\n",
-    "        hy = torch.mul(outgate, F.tanh(cy))\n",
-    "        return (hy, cy)"
+    "        resetgate = F.sigmoid(i_r + h_r)\n",
+    "        inputgate = F.sigmoid(i_i + h_i)\n",
+    "        newgate = F.tanh(i_n + (resetgate * h_n))\n",
+    "        \n",
+    "        hy = newgate + inputgate * (hidden - newgate)\n",
+    "        return hy"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:34:22.475631600Z",
-     "start_time": "2023-09-22T00:34:22.422236900Z"
+     "end_time": "2023-09-22T05:55:39.760548500Z",
+     "start_time": "2023-09-22T05:55:39.754540Z"
     }
    },
-   "id": "28917423d8e83e02"
+   "id": "c12bffca150b312a"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**LSTM 셀의 전반적인 네트워크**"
+    "**전반적인 네트워크 구조**"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "80e996b88f9eb20"
+   "id": "6e780eeb9de7682e"
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "outputs": [],
    "source": [
-    "class LSTMModel(nn.Module):\n",
+    "class GRUModel(nn.Module):\n",
     "    def __init__(self, input_dim, hidden_dim, layer_dim, output_dim, bias=True):\n",
-    "        super(LSTMModel, self).__init__()\n",
+    "        super(GRUModel, self).__init__()\n",
     "        self.hidden_dim = hidden_dim\n",
-    "        \n",
     "        self.layer_dim = layer_dim\n",
-    "        self.lstm = LSTMCell(input_dim, hidden_dim, layer_dim)\n",
+    "        \n",
+    "        self.gru_cell = GRUCell(input_dim, hidden_dim, layer_dim)\n",
     "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -250,20 +248,13 @@
     "            h0 = Variable(torch.zeros(self.layer_dim, x.size(0), self.hidden_dim).cuda())\n",
     "        else:\n",
     "            h0 = Variable(torch.zeros(self.layer_dim, x.size(0), self.hidden_dim))\n",
-    "        \n",
-    "        if torch.cuda.is_available():\n",
-    "            c0 = Variable(torch.zeros(self.layer_dim, x.size(0), self.hidden_dim).cuda())\n",
-    "        else:\n",
-    "            c0 = Variable(torch.zeros(self.layer_dim, x.size(0), self.hidden_dim))\n",
     "            \n",
     "        outs = []\n",
-    "        cn = c0[0, :, :]\n",
     "        hn = h0[0, :, :]\n",
     "        \n",
     "        for seq in range(x.size(1)):\n",
-    "            hn, cn = self.lstm(x[:, seq, :], (hn, cn))\n",
+    "            hn = self.gru_cell(x[:, seq, :], hn)\n",
     "            outs.append(hn)\n",
-    "            \n",
     "        out = outs[-1].squeeze()\n",
     "        out = self.fc(out)\n",
     "        return out"
@@ -271,25 +262,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:34:22.475631600Z",
-     "start_time": "2023-09-22T00:34:22.426490200Z"
+     "end_time": "2023-09-22T05:55:39.771374800Z",
+     "start_time": "2023-09-22T05:55:39.756548500Z"
     }
    },
-   "id": "647acdf2be1876ef"
+   "id": "83b62fe5aa6de1a9"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**옵티마이저와 손실 함수 지정**"
+    "**옵티마이저와 손실 함수 설정**"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "c8552b228fa2b91a"
+   "id": "fbb98cda70e1ac1"
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "input_dim = 28\n",
@@ -297,9 +288,11 @@
     "layer_dim = 1\n",
     "output_dim = 10\n",
     "\n",
-    "model = LSTMModel(input_dim, hidden_dim, layer_dim, output_dim)\n",
+    "model = GRUModel(input_dim, hidden_dim, layer_dim, output_dim)\n",
+    "\n",
     "if torch.cuda.is_available():\n",
     "    model.cuda()\n",
+    "    \n",
     "criterion = nn.CrossEntropyLoss()\n",
     "learning_rate = 0.1\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)"
@@ -307,48 +300,48 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:34:22.476633Z",
-     "start_time": "2023-09-22T00:34:22.435568Z"
+     "end_time": "2023-09-22T05:55:39.782077500Z",
+     "start_time": "2023-09-22T05:55:39.767607200Z"
     }
    },
-   "id": "3446b002b79efd1f"
+   "id": "2c9affe509d29f81"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**모델 학습 및 성능 확인**"
+    "**모델 학습 및 성능 검증**"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "ff3b9b140fbac52b"
+   "id": "43fd737e630a8980"
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 500, loss: 2.237457513809204, Accuracy: 21.420000076293945\n",
-      "Iteration: 1000, loss: 0.8260505199432373, Accuracy: 75.87999725341797\n",
-      "Iteration: 1500, loss: 0.3872727155685425, Accuracy: 88.36000061035156\n",
-      "Iteration: 2000, loss: 0.3054960370063782, Accuracy: 92.18000030517578\n",
-      "Iteration: 2500, loss: 0.06020743027329445, Accuracy: 95.76000213623047\n",
-      "Iteration: 3000, loss: 0.07804237306118011, Accuracy: 96.30000305175781\n",
-      "Iteration: 3500, loss: 0.15149326622486115, Accuracy: 96.25\n",
-      "Iteration: 4000, loss: 0.013213546015322208, Accuracy: 97.23999786376953\n",
-      "Iteration: 4500, loss: 0.08282919973134995, Accuracy: 96.91999816894531\n",
-      "Iteration: 5000, loss: 0.13595271110534668, Accuracy: 97.08999633789062\n",
-      "Iteration: 5500, loss: 0.10850130021572113, Accuracy: 97.43000030517578\n",
-      "Iteration: 6000, loss: 0.010295586660504341, Accuracy: 97.80000305175781\n",
-      "Iteration: 6500, loss: 0.023988911882042885, Accuracy: 97.58000183105469\n",
-      "Iteration: 7000, loss: 0.015171794220805168, Accuracy: 97.8499984741211\n",
-      "Iteration: 7500, loss: 0.037085097283124924, Accuracy: 97.9800033569336\n",
-      "Iteration: 8000, loss: 0.05167170986533165, Accuracy: 97.80000305175781\n",
-      "Iteration: 8500, loss: 0.01155410148203373, Accuracy: 98.26000213623047\n",
-      "Iteration: 9000, loss: 0.020128022879362106, Accuracy: 97.81999969482422\n"
+      "Iteration: 500. Loss: 1.6616926193237305. Accuracy: 43.59000015258789\n",
+      "Iteration: 1000. Loss: 0.8945668935775757. Accuracy: 76.19999694824219\n",
+      "Iteration: 1500. Loss: 0.29147762060165405. Accuracy: 89.7300033569336\n",
+      "Iteration: 2000. Loss: 0.23627915978431702. Accuracy: 93.51000213623047\n",
+      "Iteration: 2500. Loss: 0.03288727253675461. Accuracy: 95.05000305175781\n",
+      "Iteration: 3000. Loss: 0.030374936759471893. Accuracy: 95.81999969482422\n",
+      "Iteration: 3500. Loss: 0.16210566461086273. Accuracy: 96.33999633789062\n",
+      "Iteration: 4000. Loss: 0.19308781623840332. Accuracy: 96.19000244140625\n",
+      "Iteration: 4500. Loss: 0.051720116287469864. Accuracy: 97.0\n",
+      "Iteration: 5000. Loss: 0.1390017718076706. Accuracy: 97.26000213623047\n",
+      "Iteration: 5500. Loss: 0.08090310543775558. Accuracy: 97.62000274658203\n",
+      "Iteration: 6000. Loss: 0.10488355904817581. Accuracy: 97.69000244140625\n",
+      "Iteration: 6500. Loss: 0.07983990013599396. Accuracy: 97.80000305175781\n",
+      "Iteration: 7000. Loss: 0.1025036945939064. Accuracy: 97.55999755859375\n",
+      "Iteration: 7500. Loss: 0.06477980315685272. Accuracy: 97.86000061035156\n",
+      "Iteration: 8000. Loss: 0.10547620058059692. Accuracy: 97.80000305175781\n",
+      "Iteration: 8500. Loss: 0.04281161352992058. Accuracy: 98.0199966430664\n",
+      "Iteration: 9000. Loss: 0.04198884591460228. Accuracy: 98.22000122070312\n"
      ]
     }
    ],
@@ -356,7 +349,6 @@
     "seq_dim = 28\n",
     "loss_list = []\n",
     "iter = 0\n",
-    "\n",
     "for epoch in range(num_epochs):\n",
     "    for i, (images, labels) in enumerate(train_loader):\n",
     "        if torch.cuda.is_available():\n",
@@ -372,57 +364,56 @@
     "        \n",
     "        if torch.cuda.is_available():\n",
     "            loss.cuda()\n",
-    "            \n",
+    "        \n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "        \n",
     "        loss_list.append(loss.item())\n",
     "        iter += 1\n",
     "        \n",
     "        if iter % 500 == 0:\n",
     "            correct = 0\n",
     "            total = 0\n",
-    "            \n",
     "            for images, labels in valid_loader:\n",
     "                if torch.cuda.is_available():\n",
     "                    images = Variable(images.view(-1, seq_dim, input_dim).cuda())\n",
     "                else:\n",
     "                    images = Variable(images.view(-1, seq_dim, input_dim))\n",
-    "                \n",
+    "                    \n",
     "                outputs = model(images)\n",
     "                _, predicted = torch.max(outputs.data, 1)\n",
-    "                \n",
     "                total += labels.size(0)\n",
     "                \n",
     "                if torch.cuda.is_available():\n",
     "                    correct += (predicted.cpu() == labels.cpu()).sum()\n",
     "                else:\n",
     "                    correct += (predicted == labels).sum()\n",
-    "                    \n",
+    "                \n",
     "            accuracy = 100 * correct / total\n",
-    "            print(f\"Iteration: {iter}, loss: {loss.item()}, Accuracy: {accuracy}\")"
+    "            print(f\"Iteration: {iter}. Loss: {loss.item()}. Accuracy: {accuracy}\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:40:07.483345800Z",
-     "start_time": "2023-09-22T00:34:22.447496600Z"
+     "end_time": "2023-09-22T06:01:38.756337600Z",
+     "start_time": "2023-09-22T05:55:39.780079300Z"
     }
    },
-   "id": "61e2bec458bc0f63"
+   "id": "a10c4ae6da01ad60"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**테스트 데이터셋을 이용한 모델 예측 성능 확인**"
+    "**테스트 데이터셋을 이용한 모델 예측**"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "91235dc12159b2e2"
+   "id": "f2257fa6cf8f8ee2"
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "outputs": [],
    "source": [
     "def evaluate(model, val_iter):\n",
@@ -432,8 +423,8 @@
     "        if torch.cuda.is_available():\n",
     "            images = Variable(images.view(-1, seq_dim, input_dim).cuda())\n",
     "        else:\n",
-    "            images = Variable(images.view(-1, seq_dim, input_dim).to(device))\n",
-    "            \n",
+    "            images = Variable(images.view(-1, seq_dim, input_dim)).to(device)\n",
+    "        \n",
     "        logit = model(images).to(device)\n",
     "        loss = F.cross_entropy(logit, labels, reduction=\"sum\")\n",
     "        _, predicted = torch.max(logit.data, 1)\n",
@@ -443,37 +434,36 @@
     "        \n",
     "    avg_loss = total_loss / len(val_iter.dataset)\n",
     "    avg_accuracy = correct / total\n",
-    "    \n",
     "    return avg_loss, avg_accuracy"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:41:26.238287Z",
-     "start_time": "2023-09-22T00:41:26.232852800Z"
+     "end_time": "2023-09-22T06:01:38.769536200Z",
+     "start_time": "2023-09-22T06:01:38.761430900Z"
     }
    },
-   "id": "af6afdc9791a8603"
+   "id": "d2ae15374bc363f6"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**모델 예측 성능 확인**"
+    "**모델 예측 결과**"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "86c491148ab6bec9"
+   "id": "e935e9f8ea06e6cd"
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 81,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss:  0.06 | Test Accuracy:  0.98\n"
+      "Test Loss:  0.07 | Test Accuracy:  0.98\n"
      ]
     }
    ],
@@ -484,11 +474,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-22T00:41:37.563485800Z",
-     "start_time": "2023-09-22T00:41:34.577553300Z"
+     "end_time": "2023-09-22T06:01:41.932550600Z",
+     "start_time": "2023-09-22T06:01:38.765034400Z"
     }
    },
-   "id": "4b13509704a2a90b"
+   "id": "b18aef29ab929a4d"
   }
  ],
  "metadata": {
