--- a/pytorch/torch34.ipynb
+++ b/pytorch/torch34.ipynb
@@ -12,11 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -28,7 +24,15 @@
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-26T13:00:43.983619400Z",
+     "start_time": "2023-09-26T13:00:43.938148400Z"
+    }
+   },
+   "id": "e8ea69799e68d4e9"
   },
   {
    "cell_type": "markdown",
@@ -38,11 +42,11 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "bbad125fa17070df"
+   "id": "ec12fdf101f4534d"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"../pytorch/data/diabetes.csv\")\n",
@@ -54,9 +58,13 @@
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.33)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-26T13:00:44.007970800Z",
+     "start_time": "2023-09-26T13:00:43.948079Z"
+    }
    },
-   "id": "ba48f8491e88d916"
+   "id": "e84c84ab4624d38"
   },
   {
    "cell_type": "markdown",
@@ -66,11 +74,11 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "bb80a52021bf4c3d"
+   "id": "438903c547d77721"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "ms = MinMaxScaler()\n",
@@ -84,9 +92,13 @@
     "y_test = ms.fit_transform(y_test)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-26T13:00:44.009978600Z",
+     "start_time": "2023-09-26T13:00:43.975550100Z"
+    }
    },
-   "id": "a52bd2f28198dccf"
+   "id": "35f4c7ce49666a9c"
   },
   {
    "cell_type": "markdown",
@@ -96,11 +108,11 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "8e6f137a3d59062a"
+   "id": "66d7c69df91abdc5"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "class CustomDataset(Dataset):\n",
@@ -116,9 +128,13 @@
     "        return self.len"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-26T13:00:44.011401500Z",
+     "start_time": "2023-09-26T13:00:43.987003700Z"
+    }
    },
-   "id": "fb0a6c8c426c836b"
+   "id": "d2ee93bcd1a23710"
   },
   {
    "cell_type": "markdown",
@@ -128,11 +144,11 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "f0047cf561e11ef"
+   "id": "f7baef3127bc1547"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "train_data = CustomDataset(torch.FloatTensor(x_train),\n",
@@ -144,9 +160,13 @@
     "test_loader = DataLoader(dataset=test_data, batch_size=64, shuffle=False)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-26T13:00:44.011401500Z",
+     "start_time": "2023-09-26T13:00:43.993498600Z"
+    }
    },
-   "id": "a822326634d544c9"
+   "id": "adbb71aa7f3ab477"
   },
   {
    "cell_type": "markdown",
@@ -156,11 +176,11 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "68cfb138146e23d4"
+   "id": "e172d921d1c763bf"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "class BinaryClassification(nn.Module):\n",
@@ -184,22 +204,156 @@
     "        return x"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-26T13:00:44.011401500Z",
+     "start_time": "2023-09-26T13:00:44.005624900Z"
+    }
    },
-   "id": "914453131e003e05"
+   "id": "5f591e7ce96fa159"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BinaryClassification(\n",
+      "  (layer_1): Linear(in_features=8, out_features=64, bias=True)\n",
+      "  (layer_2): Linear(in_features=64, out_features=64, bias=True)\n",
+      "  (layer_out): Linear(in_features=64, out_features=1, bias=True)\n",
+      "  (relu): ReLU()\n",
+      "  (dropout): Dropout(p=0.1, inplace=False)\n",
+      "  (batchnorm1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (batchnorm2): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
-    "epochs = 1000 + 1\n",
-    "print_epoch = 100"
+    "epoch_num = 100\n",
+    "print_epoch = 10\n",
+    "lr = 1e-2\n",
+    "\n",
+    "model = BinaryClassification().to(device)\n",
+    "print(model)\n",
+    "BCE = nn.BCEWithLogitsLoss()\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=lr)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-26T13:00:44.319913Z",
+     "start_time": "2023-09-26T13:00:44.015509600Z"
+    }
    },
-   "id": "7a1a9c96cd1765b3"
+   "id": "7737aaa01a9b9fac"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [],
+   "source": [
+    "def accuracy(y_pred, y_test):\n",
+    "    y_pred = torch.round(torch.sigmoid(y_pred))\n",
+    "    correct_results_sum = (y_pred == y_test).sum().float()\n",
+    "    acc = correct_results_sum / y_test.shape[0]\n",
+    "    acc = torch.round(acc * 100)\n",
+    "    return acc"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-26T13:00:44.327807200Z",
+     "start_time": "2023-09-26T13:00:44.319913Z"
+    }
+   },
+   "id": "3cb37427ca23e610"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: epoch: 0  - loss: 0.69440 - acc: 50.667\n",
+      "Test: epoch: 0  - loss: 0.68268 - acc: 59.750\n",
+      "Train: epoch: 10  - loss: 0.59047 - acc: 70.444\n",
+      "Test: epoch: 10  - loss: 0.56403 - acc: 71.250\n",
+      "Train: epoch: 20  - loss: 0.48650 - acc: 80.111\n",
+      "Test: epoch: 20  - loss: 0.58176 - acc: 68.750\n",
+      "Train: epoch: 30  - loss: 0.47228 - acc: 76.778\n",
+      "Test: epoch: 30  - loss: 0.54246 - acc: 71.250\n",
+      "Train: epoch: 40  - loss: 0.46626 - acc: 76.333\n",
+      "Test: epoch: 40  - loss: 0.53605 - acc: 75.000\n",
+      "Train: epoch: 50  - loss: 0.44167 - acc: 77.000\n",
+      "Test: epoch: 50  - loss: 0.52236 - acc: 74.750\n",
+      "Train: epoch: 60  - loss: 0.41852 - acc: 82.333\n",
+      "Test: epoch: 60  - loss: 0.53753 - acc: 74.000\n",
+      "Train: epoch: 70  - loss: 0.42538 - acc: 76.667\n",
+      "Test: epoch: 70  - loss: 0.51109 - acc: 77.500\n",
+      "Train: epoch: 80  - loss: 0.49221 - acc: 77.222\n",
+      "Test: epoch: 80  - loss: 0.50122 - acc: 76.000\n",
+      "Train: epoch: 90  - loss: 0.46104 - acc: 76.889\n",
+      "Test: epoch: 90  - loss: 0.90118 - acc: 69.750\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(epoch_num):\n",
+    "    iteration_loss = 0\n",
+    "    iteration_acc = 0\n",
+    "\n",
+    "    model.train()\n",
+    "    for i, data in enumerate(train_loader):\n",
+    "        X, y = data\n",
+    "        X, y = X.to(device), y.to(device)\n",
+    "\n",
+    "        y_pred = model(X.float())\n",
+    "        loss = BCE(y_pred, y.reshape(-1, 1).float())\n",
+    "\n",
+    "        iteration_loss += loss\n",
+    "        iteration_acc += accuracy(y_pred, y)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    if epoch % print_epoch == 0:\n",
+    "        print(f\"Train: epoch: {epoch}\", end=\"\")\n",
+    "        print(\n",
+    "            f\"  - loss: {iteration_loss / (i+1):.5f} - acc: {iteration_acc / (i+1):.3f}\"\n",
+    "        )\n",
+    "\n",
+    "    iteration_loss = 0\n",
+    "    iteration_acc = 0\n",
+    "\n",
+    "    model.eval()\n",
+    "    for i, data in enumerate(test_loader):\n",
+    "        X, y = data\n",
+    "        X, y = X.to(device), y.to(device)\n",
+    "\n",
+    "        y_pred = model(X.float())\n",
+    "        loss = BCE(y_pred, y.reshape(-1, 1).float())\n",
+    "\n",
+    "        iteration_loss += loss\n",
+    "        iteration_acc += accuracy(y_pred, y)\n",
+    "    if epoch % print_epoch == 0:\n",
+    "        print(f\"Test: epoch: {epoch}\", end=\"\")\n",
+    "        print(\n",
+    "            f\"  - loss: {iteration_loss / (i+1):.5f} - acc: {iteration_acc / (i+1):.3f}\"\n",
+    "        )"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-26T13:00:49.754604800Z",
+     "start_time": "2023-09-26T13:00:44.336813Z"
+    }
+   },
+   "id": "2307718d26e1c22a"
   }
  ],
  "metadata": {
